Fix display issues on firefox

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -112,8 +112,13 @@ div {
 .top-image {
   object-fit: cover;
   width: 100%;
-  max-height: 50vh;
+  /* height: 50vh; */
   min-height: 30vh;
+}
+
+.crop-top {
+  overflow: hidden;
+  max-height: 50vh;
 }
 
 /* .logo {
